# GraphicalDotFileManager

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  gdfm.desktop
src/: CMakeLists.txt  command.cc  command.h  config.h.in  configfilereader.cc  configfilereader.h  configfilewriter.cc  configfilewriter.h  createmoduledialog.cc  createmoduledialog.h  dependencyaction.cc  dependencyaction.h  dependencyeditor.cc  dependencyeditor.h  filecheckaction.cc  filecheckaction.h  filecheckeditor.cc  filecheckeditor.h  filefinder.cc  filefinder.h  gdfmmodelcolumnrecord.cc  gdfmmodelcolumnrecord.h  gdfmwindow.cc  gdfmwindow.h  installaction.cc  installaction.h  installactioneditor.cc  installactioneditor.h  main.cc  messageaction.cc  messageaction.h  messageeditor.cc  messageeditor.h  module.cc  module.h  moduleaction.cc  moduleaction.h  moduleactioneditor.cc  moduleactioneditor.h  modulefile.cc  (+17 more)
src/res/: gdfm.gresource.xml
src/res/ui/: createmoduledialog.glade  mainwindow.glade
